Update blog web UI

--- a/_includes/scripts/newsletter.liquid
+++ b/_includes/scripts/newsletter.liquid
@@ -14,7 +14,7 @@
       class="newsletter-form-input"
       name="newsletter-form-input"
       type="email"
-      placeholder="user@example.com"
+      placeholder="Your email address..."
       required=""
     >
 
@@ -23,7 +23,7 @@
       class="newsletter-form-button"
       style="justify-content: {% if include.left %}flex-start{% elsif include.right %}flex-end{% else %}center{% endif %}"
     >
-      subscribe
+      Get email updates
     </button>
 
     <button
