--- a/_includes/related_posts.liquid
+++ b/_includes/related_posts.liquid
@@ -17,6 +17,6 @@
   </li>
 {% endfor %}
 {% if site.newsletter.enabled and site.footer_fixed %}
-  <p class="mb-2" style="margin-top: 1.5rem !important">Subscribe to be notified of future articles:</p>
-  {% include scripts/newsletter.liquid left=true %}
+  <p class="mb-2" style="margin-top: 1.5rem !important; text-align: center;">Join others in exploring AI, biology, and cutting-edge research updates.</p>
+  {% include scripts/newsletter.liquid center=true %}
 {% endif %}
