--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -82,9 +82,9 @@ html[data-theme="dark"] {
   --global-theme-color: #{$custom_color2};
   --global-hover-color: #{$custom_color2};
   --global-hover-text-color: #{$white-color};
-  --global-footer-bg-color: #{$grey-color-light};
-  --global-footer-text-color: #{$grey-color-dark};
-  --global-footer-link-color: #{$black-color};
+  --global-footer-bg-color: #{$grey-color-dark};
+  --global-footer-text-color: #{$grey-color-light};
+  --global-footer-link-color: #{$white-color};
   --global-distill-app-color: #{$grey-color-light};
   --global-divider-color: #424246;
   --global-card-bg-color: #{$grey-900};
