Update newsletter setting

--- a/_includes/scripts/newsletter.liquid
+++ b/_includes/scripts/newsletter.liquid
@@ -39,7 +39,7 @@
     class="newsletter-success"
     style="justify-content: {% if include.left %}flex-start{% elsif include.right %}flex-end{% else %}center{% endif %}"
   >
-    <p class="newsletter-success-message">You're subscribed!</p>
+    <p class="newsletter-success-message">Thanks for subscribing!</p>
   </div>
 
   <div
