--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -549,8 +549,12 @@ footer.sticky-bottom {
     li {
       list-style: none;
       display: inline-block;
-      padding: 1rem 0.5rem;
+      padding: 0rem 0.5rem;
       color: var(--global-text-color-light);
+      background-color: #f2f2f2;
+      border: 5px;
+      line-height: 1.2em;
+      border-radius: 5px; /* 添加圆角效果 */
     }
   }
 }
