--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -551,10 +551,10 @@ footer.sticky-bottom {
       display: inline-block;
       padding: 0rem 0.5rem;
       color: var(--global-text-color-light);
-      background-color: #f2f2f2;
+      // background-color: silver;
       border: 5px;
       line-height: 1.2em;
-      border-radius: 5px; /* 添加圆角效果 */
+      // border-radius: 5px; /* 添加圆角效果 */
     }
   }
 }
