--- a/_layouts/page.liquid
+++ b/_layouts/page.liquid
@@ -12,6 +12,7 @@ layout: default
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
     <p class="post-description">{{ page.description }}</p>
+    <img src="{{ site.baseurl }}/assets/img/{{ page.background_image }}" alt="Projects Image" class="projects-img">
   </header>
 
   <article>
