--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -8,7 +8,7 @@ layout: default
         <span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}
         {{ site.last_name }}
       {% else %}
-        <img src="{{ 'assets/img/logo-name.svg' | relative_url }}" alt="DeepBioLab Logo" style="height: 80px; max-width: 100%; vertical-align: middle;">
+        <img src="{{ 'assets/img/logo-name.svg' | relative_url }}" alt="DeepBioLab Logo" style="height: auto; max-width: 100%; vertical-align: middle;">
         {% comment %}
         {{ site.title }}
         {% endcomment %}
