--- a/_includes/citation.liquid
+++ b/_includes/citation.liquid
@@ -1,15 +1,14 @@
 <br>
 <hr>
 <br>
-
-If you found this useful, please cite this as:
+<h2>Citation</h2>
 
 {% capture citation_quote -%}
 > {{ site.last_name }}, {{ site.first_name }}{% if site.middle_name %} {{ site.middle_name }}{% endif %} ({{ page.date | date: "%b %Y" }}). {{ page.title }}. {% if site.title != 'blank' %}{{ site.title }}. {% endif %}{{ site.url }}.
 {%- endcapture %}
 {{ citation_quote | markdownify }}
 
-<p>or as a BibTeX entry:</p>
+<p>Or</p>
 
 {% capture citation_code -%}
 ```bibtex
@@ -24,3 +23,7 @@ If you found this useful, please cite this as:
 ```
 {%- endcapture %}
 {{ citation_code | markdownify }}
+
+<br>
+<hr>
+<br>
