--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -64,6 +64,7 @@ layout: default
   <article class="post-content">
     {% if page.toc and page.toc.beginning %}
       <div id="table-of-contents">
+        <h3>Table of Contents</h3>
         {% toc %}
       </div>
       <hr>
