--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -73,7 +73,7 @@ blockquote {
   border-left: 5px solid var(--global-theme-color);
   margin: 1.5em 0;
   padding: 1em;
-  font-size: 1.2rem;
+  font-size: 1rem;
 
   p {
     margin-bottom: 0;
@@ -837,6 +837,7 @@ footer.sticky-bottom {
     padding-top: 1rem;
     margin-top: 2rem;
     text-align: right;
+    display: none;
   }
 
   ol.bibliography {
